feat: changes of test

--- a/src/app/es/inicio/inicio.component.html
+++ b/src/app/es/inicio/inicio.component.html
@@ -9,7 +9,7 @@
       routerLink="/es/aplica-ahora"
       class="font-bold text-gray-900 py-2 px-8 m-auto mt-16 focus:outline-none border-orange-gradient rounded-lg text-lg ml-0"
     >
-      Aplica ahora
+      Subscribete
     </a>
   </div>
   <div class="flex justify-center">
