feat: implement logo

--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -2,12 +2,7 @@
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
     <div class="lg:w-0 lg:flex-1">
       <a [routerLink]="'/' + lang" class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-        <img class="h-8 w-auto sm:h-10" src="/assets/images/beesoftlabs-logo.svg" alt="beesoftlabs logo" />
-        <img
-          class="h-8 w-auto sm:h-10 pt-2 ml-4"
-          src="/assets/images/beesoftlabs-text-logo.svg"
-          alt="beesoftlabs logo"
-        />
+        <img class="h-32 w-auto sm:h-10" src="/assets/images/logo1.png" alt="mododificildev" />
       </a>
     </div>
 
