--- a/src/app/es/blog/blog.component.html
+++ b/src/app/es/blog/blog.component.html
@@ -1,66 +1,198 @@
-<section class="text-gray-700 body-font">
-  <div class="container px-5 py-10 mx-auto">
-    <div class="text-center mb-20">
-      <div class="flex justify-center title-font font-bold items-center text-black m-24">
-        <img class="h-8 w-auto sm:h-10" src="/assets/images/beesoftlabs-logo.svg" alt="beesoftlabs logo" />
-        <img
-          class="h-8 w-auto sm:h-10 pt-2 ml-4"
-          src="/assets/images/beesoftlabs-text-logo.svg"
-          alt="beesoftlabs logo"
-        />
-      </div>
-      <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-orange">Nuestra misión</p>
-      <h1 class="sm:text-2xl md:text-4xl lg:text-5xl font-bold text-center title-font text-black mb-4">
-        Cambiar vidas a través de la programación
-      </h1>
-      <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto">
-        En <strong>BeeSoft Labs</strong>, antes llamado <strong>Code Your Future</strong> edición Colombia, nos
-        interesamos por enseñar desarrollo web, principalmente a personas de bajos recursos económicos. Llevándolos a un
-        nivel de conocimientos suficiente para obtener su primer empleo en una de las mejores industrias económicas de
-        la actualidad. La industria de las tecnologías de la información.
-      </p>
-    </div>
-  </div>
-</section>
-
-<section class="text-gray-700 body-font border-t border-gray-200">
+<section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
-    <h2 class="sm:text-xl md:text-3xl lg:text-4xl font-bold text-center title-font text-black mb-24">
-      Nuestro apasionado equipo
-    </h2>
-    <div class="flex flex-wrap -m-4 justify-center">
-      <div
-        class="flex-no-wrap sm:w-1/2 md:w-1/3 lg:w-1/4 lg:mb-0 p-4 black-and-withe"
-        *ngFor="let member of team; index as i"
-      >
-        <div class="h-full text-center">
+    <div class="flex flex-wrap -m-4">
+      <div class="p-4 md:w-1/3">
+        <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
           <img
-            alt="profile-photo"
-            class="w-32 h-32 mb-2 object-cover object-center rounded-full inline-block border-2 border-gray-200 bg-gray-100"
-            [src]="member.avatarUrl"
+            class="lg:h-48 md:h-36 w-full object-cover object-center"
+            src="https://dummyimage.com/720x400"
+            alt="blog"
           />
-          <h2 class="text-gray-900 font-semibold title-font text-xl">{{ member.name }}</h2>
-          <span
-            ><a class="text-black font-bold text-sm">{{ member.position }}</a>
-            <!--            |-->
-            <!--            <a class="text-gray-500 leading-relaxed hover:text-black cursor-pointer">Bio</a>-->
-          </span>
+          <div class="p-6">
+            <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The Catalyzer</h1>
+            <p class="leading-relaxed mb-3">
+              Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.
+            </p>
+            <div class="flex items-center flex-wrap">
+              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" data-bcup-haslogintext="no"
+                >Learn More
+                <svg
+                  class="w-4 h-4 ml-2"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M5 12h14"></path>
+                  <path d="M12 5l7 7-7 7"></path>
+                </svg>
+              </a>
+              <span
+                class="text-gray-400 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200"
+              >
+                <svg
+                  class="w-4 h-4 mr-1"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  viewBox="0 0 24 24"
+                >
+                  <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                  <circle cx="12" cy="12" r="3"></circle></svg
+                >1.2K
+              </span>
+              <span class="text-gray-400 inline-flex items-center leading-none text-sm">
+                <svg
+                  class="w-4 h-4 mr-1"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"
+                  ></path></svg
+                >6
+              </span>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-
-  <div class="container px-5 py-24 mx-auto">
-    <div class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto">
-      <h2 class="flex-grow sm:pr-16 sm:text-2xl md:text-4xl lg:text-5xl font-extrabold title-font text-black">
-        Únete a nuestro equipo de voluntarios
-      </h2>
-      <a
-        class="flex-shrink-0 font-bold py-2 px-8 focus:outline-none border-orange-gradient rounded-lg text-lg mt-10 sm:mt-0"
-        routerLink="/es/aplica-ahora"
-      >
-        Más info.
-      </a>
+      <div class="p-4 md:w-1/3">
+        <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+          <img
+            class="lg:h-48 md:h-36 w-full object-cover object-center"
+            src="https://dummyimage.com/721x401"
+            alt="blog"
+          />
+          <div class="p-6">
+            <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The 400 Blows</h1>
+            <p class="leading-relaxed mb-3">
+              Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.
+            </p>
+            <div class="flex items-center flex-wrap">
+              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" data-bcup-haslogintext="no"
+                >Learn More
+                <svg
+                  class="w-4 h-4 ml-2"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M5 12h14"></path>
+                  <path d="M12 5l7 7-7 7"></path>
+                </svg>
+              </a>
+              <span
+                class="text-gray-400 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200"
+              >
+                <svg
+                  class="w-4 h-4 mr-1"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  viewBox="0 0 24 24"
+                >
+                  <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                  <circle cx="12" cy="12" r="3"></circle></svg
+                >1.2K
+              </span>
+              <span class="text-gray-400 inline-flex items-center leading-none text-sm">
+                <svg
+                  class="w-4 h-4 mr-1"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"
+                  ></path></svg
+                >6
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="p-4 md:w-1/3">
+        <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+          <img
+            class="lg:h-48 md:h-36 w-full object-cover object-center"
+            src="https://dummyimage.com/722x402"
+            alt="blog"
+          />
+          <div class="p-6">
+            <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Shooting Stars</h1>
+            <p class="leading-relaxed mb-3">
+              Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.
+            </p>
+            <div class="flex items-center flex-wrap">
+              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" data-bcup-haslogintext="no"
+                >Learn More
+                <svg
+                  class="w-4 h-4 ml-2"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M5 12h14"></path>
+                  <path d="M12 5l7 7-7 7"></path>
+                </svg>
+              </a>
+              <span
+                class="text-gray-400 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200"
+              >
+                <svg
+                  class="w-4 h-4 mr-1"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  viewBox="0 0 24 24"
+                >
+                  <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                  <circle cx="12" cy="12" r="3"></circle></svg
+                >1.2K
+              </span>
+              <span class="text-gray-400 inline-flex items-center leading-none text-sm">
+                <svg
+                  class="w-4 h-4 mr-1"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"
+                  ></path></svg
+                >6
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
