--- a/src/app/ui/footer/footer.component.html
+++ b/src/app/ui/footer/footer.component.html
@@ -4,24 +4,13 @@
       class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900"
       data-bcup-haslogintext="no"
     >
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        stroke="currentColor"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full"
-        viewBox="0 0 24 24"
-      >
-        <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-      </svg>
-      <span class="ml-3 text-xl">ModoDificilDevs</span>
+      <img class="w-10 h-10 text-white p-2 rounded-full" src="assets/images/icono1.png" />
+      <span class="ml-3 text-xl">Modo Difícil Devs</span>
     </a>
     <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">
-      © 2020 ModoDifilDevs —
+      © 2020 Modo Difícil Devs —
       <a
-        href="https://twitter.com/knyttneve"
+        href="https://twitter.com/derlys_paola"
         class="text-gray-600 ml-1"
         rel="noopener noreferrer"
         target="_blank"
