feat: store mission order on create

--- a/src/app/es/inicio/inicio.component.html
+++ b/src/app/es/inicio/inicio.component.html
@@ -2,16 +2,15 @@
   <div class="container px-5 py-24 mx-auto flex flex-col">
     <div class="lg:w-4/6 mx-auto">
       <div class="rounded-lg h-64 overflow-hidden">
-        <img alt="content" class="h-full" src="/assets/images/logo1.png" />
+        <img alt="content" class="h-full" src="/assets/images/logo.png" />
       </div>
       <div class="flex flex-col sm:flex-row mt-10">
         <div
           class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-200 sm:border-t-0 border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left"
         >
-          <p class="leading-relaxed text-3xl mb-8">¡BIENVENID@ A MI HOMEPAGE DE FORMACIÓN EN DESARROLLODE SOFTWARE!</p>
+          <p class="leading-relaxed text-3xl mb-8">¡BIENVENID@ A MI HOMEPAGE DE FORMACIÓN EN DESARROLLO DE SOFTWARE!</p>
           <p class="leading-relaxed text-xl mb-4">
-            Formación continua para potenciar tu aprendizaje a través de comunidades, post, menmtorias y más.
-            ¿Empezamos?
+            Formación continua para potenciar tu aprendizaje a través de comunidades, post, mentorías y más. ¿Empezamos?
           </p>
           <button class="bg-blue-700 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded">
             <a class="text-black inline-flex items-center" data-bcup-haslogintext="no"
