--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -2,24 +2,15 @@
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
     <div class="lg:w-0 lg:flex-1">
       <a [routerLink]="'/' + lang" class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-        <img class="h-32 w-auto sm:h-10" src="/assets/images/logo1.png" alt="mododificildev" />
+        <img class="h-32 w-auto sm:h-10" src="/assets/images/icono1.png" alt="mododificildevs" />
       </a>
     </div>
 
     <ng-container
-      *ngFor="let link of links; let last = last"
+      *ngFor="let link of links"
       class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center"
     >
-      <a
-        class="mr-5 hover:text-gray-900"
-        routerLinkActive="font-bold"
-        [class.bg-gradient-to-r]="last"
-        [class.from-purple-700]="last"
-        [class.to-pink-600]="last"
-        [class.text-gradient]="last"
-        [routerLink]="link.path"
-        >{{ link.label }}</a
-      >
+      <a class="mr-5 hover:text-gray-900" routerLinkActive="font-bold" [routerLink]="link.path">{{ link.label }}</a>
     </ng-container>
 
     <a routerLink="/en" *ngIf="false && lang === 'es'">
