feat: changes in my history

--- a/src/app/es/mi-historia/mi-historia.component.html
+++ b/src/app/es/mi-historia/mi-historia.component.html
@@ -11,17 +11,33 @@
           d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z"
         ></path>
       </svg>
-      <p class="leading-relaxed text-lg">
-        Edison bulb retro cloud bread echo park, helvetica stumptown taiyaki taxidermy 90's cronut +1 kinfolk.
-        Single-origin coffee ennui shaman taiyaki vape DIY tote bag drinking vinegar cronut adaptogen squid fanny pack
-        vaporware. Man bun next level coloring book skateboard four loko knausgaard. Kitsch keffiyeh master cleanse
-        direct trade indigo juice before they sold out gentrify plaid gastropub normcore XOXO 90's pickled cindigo jean
-        shorts. Slow-carb next level shoindigoitch ethical authentic, yr scenester sriracha forage franzen organic
-        drinking vinegar.
+      <p class="leading-relaxed text-lg text-justify">
+        Mi nombre es Derlys Dominguez, de la generación del 87, he sido nómada desde que nací, pero solo hace poco note
+        que así fue. Me considero una mujer sencilla, cálida, accesible y abierta a la adaptación y el auto aprendizaje,
+        me gusta pasar todo el tiempo que puedo junto a mi esposo, pintar como amateur de acuarela y hacer actividades
+        que potencien mi creatividad.<br />
+        Graduada como tecnóloga en operación y mantenimiento Electromecánico en el 2015, trabaje en la industria de la
+        electromecánica durante 4 años en diferentes empresas.<br />
+        Durante 2 años he sido coordinadora de la fundación
+        <a href="https://beesoftlabs.dev/es/inicio" target="_blank"><b>BeeSoft Labs </b></a>antes Code Your Future
+        Colombia. Estoy constantemente capacitandome de manera autodidacta para aprender desarrollo de software. He
+        utilizado diferentes plataformas en la ruta de mi aprendizaje y espero ejercer pronto como desarrolladora Full
+        stack. En estos momentos soy developer in training en Colmena, fiel creyente en el potencial de las mujeres y en
+        su capacidad de ser multifacéticas, valientes y poderosas. <br />Este es mi blog principal, en el que cuento
+        fundamentalmente mi camino hacia lo que quiero alcanzar , haciéndolo del modo difícil. El nombre de este blog
+        fue inspirado por una de las personas que han cambiado mi mente con su forma de ver la vida y ayudar a otros. En
+        sus propias palabras <b> "La vida es un juego en modo difícil"</b>, Gracias Yokoi Kenji. <br />
+        No quiero transitar sola el camino, quiero que me acompañes en cada reto, en cada enseñanza, en cada triunfo,
+        que comience el juego!. <br />
+        Puedes encontrarme en
+        <a class="hover:underline" href="https://twitter.com/derlys_paola" target="_blank">twitter</a> y en
+        <a class="hover:underline" href="https://www.instagram.com/derlysdm/" target="_blank">instagram</a>. Muy
+        agradecida de que te pases por este pequeño espacio de historias, y espero te aporte algo, aunque solo sean
+        dudas. Si tras leer algún post te hago pensar… objetivo conseguido !!
       </p>
       <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-8 mb-6"></span>
-      <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">HOLDEN CAULFIELD</h2>
-      <p class="text-gray-500">Senior Product Designer</p>
+      <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">DERLYS PAOLA DOMINGUEZ</h2>
+      <p class="text-gray-500">Desarrolladora Full Stack</p>
     </div>
   </div>
 </section>
